イベントのdeleteメソッド
