# docs/api-document.yaml
@@ -199,6 +199,44 @@ paths:
           $ref: "#/components/responses/BadRequest"
         "500":
           $ref: "#/components/responses/InternalServerError"
+  /user/event/{id}/{eventId}:
+    delete:
+      tags:
+        - event
+      summary: "Delete user's event"
+      description: "Allows a user to delete an event."
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: "userID"
+          schema:
+            type: string
+            example: ""
+        - name: eventId
+          in: path
+          required: true
+          description: "eventID"
+          schema:
+            type: string
+            example: ""
+      responses:
+        "200":
+          description: "Successful deletion"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "Success message"
+                example:
+                  message: "User event deleted successfully"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
 components:
   securitySchemes:
     Bearer:
